--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -282,7 +282,7 @@ Halleluja! du bist! du warst! und bleibest ewig\\
 Herr, unser Gott!“\columnbreak
 
 \itshape
-Alt hylled laae \textup{[\textit{or}: \textit{slumred dybt}]}\\
+Alt hylled laae [\textit{or}: slumred dybt]\\
 i Muelighedens Skiød,\\
 i Nattens Svælg var Tomhed, Mørke, Død.\\
 Men giennem Evighedens Chaos lød\\
@@ -293,6 +293,39 @@ Nyskabte Væsners Studsen rundt brød ud:\\
 „Halleluja! vi ere!\\
 Halleluja! du er, du var, og du skal være\\
 vor Gud!”
+\end{multicols}
+\clearpage
+\begin{multicols}{2}[\lyref{vomschlaf}]
+Vom Schlaf im Schattenwald erwacht,\\
+sieht, wenn der Morgen wieder lacht,\\
+was lebt, sich deine Herrlichkeit erneun!\\
+Sieh! Vögel froh auf leichten Schwingen\\
+hinauf in goldne Wolken dringen,\\
+ihr Loblied wiederhallt in Flur und Hain!\\
+Weit strahlet wachsend deine lichte\\
+\hspace*{1em}Morgenröthe!\\
+Mild glänzt der Thau, die Rose glüht,\\
+sanft weht die Luft, der Bach entflieht,\\
+und Haingesang ertönt zur Schöpfungs Feier,\\
+milder Thau, Rosenduft,\\
+Haingesang, kühle Luft\\
+begrüßt den Tag, erweckt zur Morgenfeier.\columnbreak
+
+\itshape
+Fra Skovens [\textit{or}: Lundens] skyggefulde Lye\\
+seer vækket Liv, hver Morgen nye,\\
+i Mark [\textit{or}: Skov] og Eng din Herlighed fremgrye!\\
+See! Fuglen fro, paa lette Vinger\\
+sig op i Luftens Purpur svinger,\\
+Din [\textit{or}: Dens] Lovsang dirrer høit i gyldne Skye!\\
+Vidt straaler voxende din lyse\\
+\hspace*{1em}Morgenrøde!\\
+Og Duggens Blik, og Blomstrets Smiil,\\
+og Vindens Vift, og Bækkens Iil,\\
+i yndig Kappen stræber den imøde,\\
+Duggens Blik, Blomstrets Smiil,\\
+Vindens Vift, Bækkens Iil\\
+i yndig Kappen stræber den imøde.
 \end{multicols}
 
 
