--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -215,6 +215,7 @@ In general, this edition closely follows the manuscript. Any changes that were i
 	–  & –   & org   & All bass figures were supplemented by the editor. \\
 	1  & 58  & timp  & 2nd half of bar in Ms: c4–c4 \\
 	   & 31  & B     & 4th quarter: grace note missing in Ms \\
+	4  & 43  & cor 2 & 4th quarter in Ms: c″4 \\
 	\bottomrule
 \end{longtable}
 
@@ -295,6 +296,7 @@ Halleluja! du er, du var, og du skal være\\
 vor Gud!”
 \end{multicols}
 \clearpage
+
 \begin{multicols}{2}[\lyref{vomschlaf}]
 Vom Schlaf im Schattenwald erwacht,\\
 sieht, wenn der Morgen wieder lacht,\\
@@ -327,6 +329,38 @@ Duggens Blik, Blomstrets Smiil,\\
 Vindens Vift, Bækkens Iil\\
 i yndig Kappen stræber den imøde.
 \end{multicols}
+
+\begin{multicols}{2}[\lyref{durollest}]
+Du rollest auf der Dämmrung Flor!\\
+Die Thräne trocknest du,\\
+die thauend Blumen tränkte!\\
+Dein Himmel graut nicht, wie zuvor –\\
+des Tages lichter Held tritt auf in vollem Glanze!\\
+Umarmend die blühende Braut,\\
+entzückt von des Lichtes belebender Wonne,\\
+erzählet die Schöpfung es laut:\\
+Das ist Gott!\\
+Halleluja! wir leben!\\
+Halleluja! du bist, du warst, und bleibest ewig,\\
+Herr, unser Gott!\columnbreak
+
+\itshape
+
+Du ruller bort Naturens Slør!\\
+Du tørrer Duggens Graad,\\
+som Jordens Ansigt væder!\\
+Din Himmel skiules ei, som før —\\
+see! Dagens lyse Helt i fulde Glands fremtræder!\\
+Han favner sin rødmende Brud,\\
+og tryllet af Lysets oplivende Glæder\\
+den hele Natur bryder ud:\\
+Det er Gud!\\
+Halleluja! vi ere!\\
+Halleluja! du er, du var, og du skal være,\\
+vor Gud!\\
+
+\end{multicols}
+
 
 
 \cleardoublepage
