--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -178,7 +178,7 @@ end
 \title{Skabningens Halleluja}
 \shorttitle{Skabningens\\Halleluja}
 \subtitle{Das Halleluja der Schöpfung\\(DK-Kk mu 6506.1133)}
-\instrumentation{2 S, A, T, B (coro), 2 fl, 2 ob, 2 cl, 2 fag, 2 cor, 2 tr, 3 trb, timp,\\vl solo, 2 vl, vla, b}
+\instrumentation{2 S, A, T, B (coro), 2 fl, 2 ob, 2 cl, 2 fag, 2 cor, 2 tr, 3 trb, timp,\\vl solo, 2 vl, vla, 2 vlc, b}
 \maketitle
 
 
@@ -216,6 +216,11 @@ In general, this edition closely follows the manuscript. Any changes that were i
 	1  & 58  & timp  & 2nd half of bar in Ms: c4–c4 \\
 	   & 31  & B     & 4th quarter: grace note missing in Ms \\
 	4  & 43  & cor 2 & 4th quarter in Ms: c″4 \\
+	5  & 16  & fag 2 & grace note missing in Ms \\
+	   & 34  & T     & grace note missing in Ms \\
+	   & 44  & vlc   & bar in Ms: G8–d8–f8–e4. \\
+	   & 108 & fag 1 & 3rd quarter in Ms: r8–d8 \\
+	   & 149 & fag 1 & bar in Ms: r1 \\
 	\bottomrule
 \end{longtable}
 
@@ -345,7 +350,6 @@ Halleluja! du bist, du warst, und bleibest ewig,\\
 Herr, unser Gott!\columnbreak
 
 \itshape
-
 Du ruller bort Naturens Slør!\\
 Du tørrer Duggens Graad,\\
 som Jordens Ansigt væder!\\
@@ -357,8 +361,111 @@ den hele Natur bryder ud:\\
 Det er Gud!\\
 Halleluja! vi ere!\\
 Halleluja! du er, du var, og du skal være,\\
-vor Gud!\\
+vor Gud!
+\end{multicols}
+\newpage
+\begin{multicols}{2}[\lyref{ichhoerte}]
+Ich hörte Haingesang,\\
+die Rose that sich auf, das Laub erbebte;\\
+ich sah das Morgenroth\\
+und fühlte Lust, die neu mein Herz belebte.
 
+Doch einsam war ich, meine Brust\\
+fand leer die nicht getheilte Lust.\\
+Ich fand die junge Ros im Morgenlicht;\\
+ich lächelt ihr; doch sie verstand mich nicht.
+
+Da hörtest Schöpfer du der Sehnsucht Regen;\\
+und sieh!\\
+Holdlächelnd kam die Gattin mir entgegen!\\
+Nun blickt ich froh ins Morgenroth,\\
+und rufte: Gut ist Gott!
+
+Ich sah der Sterne Heer\\
+im festlichen Triumph den Tag begleiten;\\
+ich sah der Sonne Sieg,\\
+mein Geist verlohr sich in des Himmels\\
+\hspace*{1em}Weiten.
+
+Doch einsam war ich, meine Brust\\
+fand Wehmut nur in halber Lust.\\
+Ich rief den Bäumen, sich mit mir zu freun;\\
+doch mich verstand kein Baum im ganzen Hain.
+
+Da hörtest du der Thräne leises Flehen;\\
+und sieh!\\
+Mein ander Ich trat her von jenen Höhen –\\
+O! Gut ist Gott! rief er mir zu,\\
+ich rufte: Gott ist gut!
+
+Ich sah des Morgens Purpurzelt –\\
+ich sahs, er kam, des Tages Held –\\
+doch was ist, Morgenroth, dein Blick?\\
+Wie weicht der Sonne Gluth zurück?\\
+Was bist du schönes Thal –\\
+was bist du hoher Himmel –\\
+vorm Feuerblick des Manns?\\
+Ach, vor der Gattin Huld?
+
+O, was ist aller Herrlichkeiten Fülle\\
+vor dir, der Liebe Gluth?\\
+Vor unsrer Herzen Lust?
+
+Preis, Liebe, dir, wir leben!\\
+Preis, Liebe, dir! du bist, du warst\\
+und bleibest ewig,\\
+o Liebe, unsre Lust!
+
+\columnbreak\itshape
+Jeg hørte Lærken slaae,\\
+og Rosen aabned sig, og Løvet bæved;\\
+jeg Morgenrøden saae,\\
+og, vakt til Lyst, mit Hierte høit sig hæved.
+
+Men eene var jeg, og mit Bryst\\
+fandt Savn i sin udeelte Lyst.\\
+Jeg Roser fandt paa min bestraalte Vei;\\
+de rødmede; men de forstod mig ei.
+
+Da saae du, Skaber! mine Taarer rinde;\\
+og see!\\
+De sendte mig den smilende Mandinde!\\
+Jeg sank i Fryd ved Eegens Rod,\\
+og raabte: Gud er god!
+
+Jeg Lysets Hære saae\\
+med Dagen i Triumph til Jorden stimle;\\
+jeg Solen seire saae,\\
+og Tanken tabte sig i Himles Himle.
+
+Men eene var jeg, og mit Bryst\\
+fandt Veemod i sin halve Lyst.\\
+Jeg iilte længselfuld hvert Træ imod;\\
+men intet Træ i Lunden mig forstod.
+
+Da saae du, Fader! Taaren i mit Øye;\\
+og see!\\
+Min anden Jeg kom frem bag Skovens Høye —\\
+O! Gud er god! saa brød han ud,\\
+jeg svarte: God er Gud!
+
+Jeg Østens lyse Purpur saae —\\
+jeg skued Dagens Helt fremgaae —\\
+men hvad er Morgenrødens Smiil?\\
+Men hvad er Solens Straalers Ild?\\
+Hvad er du, skiønne Jord —\\
+hvad er du, høie Himmel —\\
+mod Mandens Tankeblik?\\
+Imod Mandindens Smiil?
+
+O hvad er alle Herligheders Vrimmel\\
+mod Flammen i vort Bryst?\\
+Mod vore Hierters Lyst?
+
+O Kierlighed! vi ere!\\
+O Kierlighed! du er, du var,\\
+og du skal være\\
+vor Lyst!
 \end{multicols}
 
 
