--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -200,9 +200,13 @@ Front matter typeset with Source Sans Pro and Fredericka the Great.
 \ifprintreport
 \chapter*{Critical Report.}
 
-This edition bases upon a manuscript in the Det Kongelige Bibliotek på Slotsholmen – Den Sorte Diamant. The digital version of the manuscript is available at \url{http://img.kb.dk/ma/kunzen/SkaHal_m.pdf} (siglum mu 6506.1133).
+This edition bases upon
+\begin{enumerate}
+	\item the autograph manuscript in the Det Kongelige Bibliotek på Slotsholmen – Den Sorte Diamant, available at \url{http://img.kb.dk/ma/kunzen/SkaHal_m.pdf} (siglum mu 6506.1133); and
+	\item the printed edition (Hans Georg Nägeli, Zürich, 1802) in the Zentralbibliothek Zürich, available at \url{https://doi.org/10.3931/e-rara-24804} (siglum AMG XIV 316).
+\end{enumerate}
 
-In general, this edition closely follows the manuscript. Any changes that were introduced by the editor are indicated by italic type (dynamics and directions), parentheses (expressive marks) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.
+In general, this edition closely follows the autograph manuscript; the printed edition was mainly used as source for the German lyrics. Any changes that were introduced by the editor are indicated by italic type (dynamics and directions), parentheses (expressive marks) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.
 
 \bigskip
 
@@ -221,6 +225,7 @@ In general, this edition closely follows the manuscript. Any changes that were i
 	   & 44  & vlc   & bar in Ms: G8–d8–f8–e4. \\
 	   & 108 & fag 1 & 3rd quarter in Ms: r8–d8 \\
 	   & 149 & fag 1 & bar in Ms: r1 \\
+	6  & 33  & T, B  & T solo in autograph Ms, B solo in printed edition \\
 	\bottomrule
 \end{longtable}
 
@@ -363,7 +368,7 @@ Halleluja! vi ere!\\
 Halleluja! du er, du var, og du skal være,\\
 vor Gud!
 \end{multicols}
-\newpage
+
 \begin{multicols}{2}[\lyref{ichhoerte}]
 Ich hörte Haingesang,\\
 die Rose that sich auf, das Laub erbebte;\\
@@ -381,6 +386,25 @@ Holdlächelnd kam die Gattin mir entgegen!\\
 Nun blickt ich froh ins Morgenroth,\\
 und rufte: Gut ist Gott!
 
+\columnbreak\itshape
+Jeg hørte Lærken slaae,\\
+og Rosen aabned sig, og Løvet bæved;\\
+jeg Morgenrøden saae,\\
+og, vakt til Lyst, mit Hierte høit sig hæved.
+
+Men eene var jeg, og mit Bryst\\
+fandt Savn i sin udeelte Lyst.\\
+Jeg Roser fandt paa min bestraalte Vei;\\
+de rødmede; men de forstod mig ei.
+
+Da saae du, Skaber! mine Taarer rinde;\\
+og see!\\
+De sendte mig den smilende Mandinde!\\
+Jeg sank i Fryd ved Eegens Rod,\\
+og raabte: Gud er god!
+\end{multicols}
+
+\begin{multicols}{2}
 Ich sah der Sterne Heer\\
 im festlichen Triumph den Tag begleiten;\\
 ich sah der Sonne Sieg,\\
@@ -390,7 +414,8 @@ mein Geist verlohr sich in des Himmels\\
 Doch einsam war ich, meine Brust\\
 fand Wehmut nur in halber Lust.\\
 Ich rief den Bäumen, sich mit mir zu freun;\\
-doch mich verstand kein Baum im ganzen Hain.
+doch mich verstand kein Baum im ganzen\\
+\hspace*{1em}Hain.
 
 Da hörtest du der Thräne leises Flehen;\\
 und sieh!\\
@@ -417,31 +442,17 @@ und bleibest ewig,\\
 o Liebe, unsre Lust!
 
 \columnbreak\itshape
-Jeg hørte Lærken slaae,\\
-og Rosen aabned sig, og Løvet bæved;\\
-jeg Morgenrøden saae,\\
-og, vakt til Lyst, mit Hierte høit sig hæved.
-
-Men eene var jeg, og mit Bryst\\
-fandt Savn i sin udeelte Lyst.\\
-Jeg Roser fandt paa min bestraalte Vei;\\
-de rødmede; men de forstod mig ei.
-
-Da saae du, Skaber! mine Taarer rinde;\\
-og see!\\
-De sendte mig den smilende Mandinde!\\
-Jeg sank i Fryd ved Eegens Rod,\\
-og raabte: Gud er god!
-
 Jeg Lysets Hære saae\\
 med Dagen i Triumph til Jorden stimle;\\
 jeg Solen seire saae,\\
-og Tanken tabte sig i Himles Himle.
+og Tanken tabte sig i Himles\\
+\hspace*{1em}Himle.
 
 Men eene var jeg, og mit Bryst\\
 fandt Veemod i sin halve Lyst.\\
 Jeg iilte længselfuld hvert Træ imod;\\
-men intet Træ i Lunden mig forstod.
+men intet Træ i Lunden mig\\
+\hspace*{1em}forstod.
 
 Da saae du, Fader! Taaren i mit Øye;\\
 og see!\\
@@ -469,6 +480,68 @@ vor Lyst!
 \end{multicols}
 
 
+\begin{multicols}{2}[\lyref{wirpreisen}]
+Wir preisen dich, wir danken dir, o Gott!\\
+Im Glanz des Lichts, in stiller Freude Schooß.
+
+Doch sehn wir deinen Wink und hören\\
+\hspace*{1em}dein Geboth\\
+in schwarzer Nacht, wo Schreckenston\\
+\hspace*{1em}uns dräut.
+
+Dein Thron wird Nacht, die Sonne fleucht\\
+vom Wolkenzug verscheucht;\\
+des Abgrunds Mächte sich erheben;
+
+\columnbreak\itshape
+Vi love dig, vi takke dig, o Gud!\\
+I Lysets Glands, i Livets stille Fryd.
+
+Men og vi see dit Vink og høre\\
+\hspace*{1em}dine Bud\\
+i Nattens Mulm, og Skrækkens døve\\
+\hspace*{1em}Lyd.
+
+Din Throne mørknes, Solen flyer\\
+bag tykke Skyer;\\
+sig Dybets sorte Kæmpe hæver;
+\end{multicols}
+
+
+\begin{multicols}{2}
+vom Donnerschlag der Erde Festen beben.
+
+Sieh, Thäler schwellen! Höhen stürzen ein!\\
+Wild zischen Flammen hinter Wassern drein!\\
+Der Sturm durchsaust zersprengter Berge\\
+\hspace*{1em}Spalten,\\
+wo Gluthen über Lavaströmen walten!\\
+Mit Schlag auf Schlag, mit Knall auf Knall,\\
+im Sturz zerschlagner Felsen, Klippenfall,\\
+mit schwarzer Wetter schrecklichem Getümmel\\
+rollt dumpf dein Donnerwagen durch die\\
+\hspace*{1em}Himmel!
+
+Gerechter Gott, du furchtbar mächtger Gott!\\
+Wir tief im Staube hören dein Geboth.
+
+\columnbreak\itshape
+og Jordens lynildslagne Grundvold bæver.
+
+See, Dale svulme! Høie synke ned!\\
+Vildt flammer Ilden hen i Vandets Fied!\\
+Igiennem vidtadsplittede\\
+\hspace*{1em}Ruiner\\
+i høit opslagne Luer Stormen hviner!\\
+Med Brag i Brag, og Skrald i Skrald,\\
+i knuste Fieldes Styrten, Klippers Fald,\\
+med bange Dundrens hule Rædselbulder\\
+din Dommervogn igiennem Himlen\\
+\hspace*{1em}rulder!
+
+Retfærdige, forfærdelige Gud!\\
+Vi dybt i Støvet høre dine Bud.
+\end{multicols}
 
 \cleardoublepage
 \fi
