--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -543,6 +543,33 @@ Retfærdige, forfærdelige Gud!\\
 Vi dybt i Støvet høre dine Bud.
 \end{multicols}
 
+\begin{multicols}{2}[\lyref{selbstwenn}]
+Selbst wenn des Lebens Engel alle flüchten,\\
+der Tod auf deinen Wink entsteigt des Abgrunds\\
+\hspace*{1em}Schlüchten,\\
+beim ernsten Gang zur Grabesruh\\
+bist noch des Herzens letzter Seufzer du.
+
+Ja, Vater! selbst im Tod, im bangen Nu\\
+\hspace*{0pt}\\
+soll aus dem Staub zu dir der Geist noch flehen,\\
+zu dir hinauf der Wurm im Moder sehen,\\
+denn sein, wie deines Serafs, denkest du.
+
+\columnbreak\itshape
+Self [or: Men] naar sig alle Livets Engle skiule,\\
+naar Døden paa dit Vink sig reiser af sin\\
+\hspace*{1em}Hule,\\
+i Morderslagets bange Nu\\
+vort knuste Hiertes sidste Suk er du.
+
+Ja, Fader! selv i Dødens bange Nu\\
+\hspace*{1em}[or: skumle Gru]\\
+skal fra dit Støv vort Intet dig anraabe,\\
+og Ormen i sit Muld med Tillid haabe,\\
+du kommer den, som Seraph selv, ihu.
+\end{multicols}
+
 \cleardoublepage
 \fi
 
