--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -570,6 +570,29 @@ og Ormen i sit Muld med Tillid haabe,\\
 du kommer den, som Seraph selv, ihu.
 \end{multicols}
 
+\begin{multicols}{2}[\lyref{gerechter}]
+Gerechter Richter! du bist ewig gut!\\
+Du gabst uns Glauben, Liebe und Vertrauen,\\
+wir dürfen fest auf deine Hülfe bauen,\\
+denn schützend waltet ob uns deine Hut.\\
+Du siehst herab mit Vaterfreundlichkeit,\\
+wenn kindlich froh des Lebens Bahn wir wallen;\\
+in Eintracht schenkst du deinen Kindern allen\\
+den Vorschmack von des Himmels\\
+\hspace*{1em}Seeligkeit.
+
+\columnbreak\itshape
+Thi, store Dommer! du er evig god!\\
+Du gav vort Hierte Kiærlighedens Vinge,\\
+vi trygge dig vor Tillids Offer bringe,\\
+du tager det med Velbehag imod.\\
+Du seer med milde Faderblikke ned,\\
+naar barnlig fro vi Livets Bane vandre;\\
+du gav os her i Samfund med hverandre\\
+en Forsmag af Seraphers\\
+\hspace*{1em}Salighed.
+\end{multicols}
+
 \cleardoublepage
 \fi
 
