--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -593,6 +593,29 @@ en Forsmag af Seraphers\\
 \hspace*{1em}Salighed.
 \end{multicols}
 
+\clearpage
+
+\begin{multicols}{2}[\lyref{ogott}]
+O Gott!\\
+Laß schwinden, was du schufst auf dein Gebot!\\
+Laß Sterne fallen, Sonnen untergehn!\\
+Des Chaos Schlünde offen widerstehn!\\
+Ob Himmel, Erd und Meere stürzten ein,\\
+Unendlicher, du warst und du wirst seyn!\\
+Allstets, im Chaos, Dunkel, fern und nah,\\
+bist du!
+
+\columnbreak\itshape
+O Gud!\\
+Lad dine Hænders Gierning slettes ud!\\
+Lad Stjerner falde, Sole svinde hen!\\
+Og Mørkets Afgrund aabne sig igien!\\
+Om Himmel, Jord, og Hav, og alt forgaaer,\\
+du, Evige den samme, du bestaaer!\\
+I Alt, i Nattens Øde, fiern og nær,\\
+du er! %130
+\end{multicols}
+
 \cleardoublepage
 \fi
 
