--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -616,6 +616,32 @@ I Alt, i Nattens Øde, fiern og nær,\\
 du er! %130
 \end{multicols}
 
+\begin{multicols}{2}[\lyref{undleben}]
+Und Leben, Licht und Freud ist ewig, so wie du.\\
+O Wonn in unsrer Brust!\\
+Dir, Liebe, Preis! wir leben!\\
+Halleluja! du bist, du warst, und bleibest ewig,\\
+o Liebe, unsre Lust!
+
+\columnbreak\itshape
+Og Lys og Liv og Lyst er evig hvor du er.\\
+O Himmel i vort Bryst!\\
+O Kiærlighed! vi ere!\\
+Halleluja! du er, du var, og du skal være\\
+Vor Lyst!
+\end{multicols}
+
+\begin{multicols}{2}[\lyref{heilig}]
+Heilig! Heilig! Heilig!\\
+Sink, Schöpfung, in den Staub!\\
+Neig dich, o Himmel, Erde knie, bet an!
+
+\columnbreak\itshape
+Hellig! Hellig! Hellig!\\
+Fald hele Skabning ned!\\
+Nedbøi dig, Himmel, knæl, o Jord, tilbed!
+\end{multicols}
+
 \cleardoublepage
 \fi
 
