--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -226,6 +226,7 @@ In general, this edition closely follows the autograph manuscript; the printed e
 	   & 108 & fag 1 & 3rd quarter in Ms: r8–d8 \\
 	   & 149 & fag 1 & bar in Ms: r1 \\
 	6  & 33  & T, B  & T solo in autograph Ms, B solo in printed edition \\
+	12 & 81  & vl 2  & 4th quarter in Ms: bes′8–bes′8 \\
 	\bottomrule
 \end{longtable}
 
@@ -641,6 +642,46 @@ Hellig! Hellig! Hellig!\\
 Fald hele Skabning ned!\\
 Nedbøi dig, Himmel, knæl, o Jord, tilbed!
 \end{multicols}
+
+\begin{multicols}{2}[\lyref{lobundehre}]
+Lob und Ehre dem Ewigen!\\
+\hspace*{1em}dem Allmächtigen! dem Allweisen!\\
+Preis und Ehre dem Heiligen!\\
+\hspace*{1em}dem Rechtfertigen! dem Allguten!\\
+Halleluja! dem Schöpfer!\\
+dem Richter!\\
+dem Vater!\\
+Halleluja!
+
+So lallen der Erschaffnen Melodien,\\
+so singt, was ewig ist,\\
+so tönen aller Himmel Harmonien:\\
+Halleluja! du bist!
+
+Und Donnerhall und Blitz und Sturm und Meere\\
+verkünden jeder Sphäre\\
+dich, Gott!
+
+\columnbreak\itshape
+Lovet være den Evige!\\
+\hspace*{1em}den Almægtige! den Alvise!\\
+Lovet være den Hellige!\\
+\hspace*{1em}den Retfærdige! den Algode!\\
+Halleluja! vor Skaber!\\
+vor Dommer!\\
+vor Fader!\\
+Halleluja!
+
+Saa nynner alle Støvets Melodier,\\
+saa synger Lysets Hær,\\
+saa toner alle Himles Harmonier:\\
+Halleluja! du er!
+
+Og Havets Brusen, Lyn, og Storm, og Torden\\
+basuner over Jorden:\\
+Du er!
+\end{multicols}
+
 
 \cleardoublepage
 \fi
