--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -682,6 +682,20 @@ basuner over Jorden:\\
 Du er!
 \end{multicols}
 
+\clearpage
+
+\begin{multicols}{2}[\lyref{dirjubeln}]
+Dir jubeln aller Welten Myriaden\\
+in hoher Harmonie!\\
+Dich, Schöpfer, dich, o Richter, dich, o Vater!\\
+Dich preisen sie.
+
+\columnbreak\itshape
+Dig jubler alle Kloders Myriader\\
+i Sphærers Harmonie!\\
+Dig, Skaber, dig o Dommer, dig, vor Fader!\\
+Dig prise vi.
+\end{multicols}
 
 \cleardoublepage
 \fi
