--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -216,17 +216,18 @@ In general, this edition closely follows the autograph manuscript; the printed e
 	\toprule
 	\itshape Mov. & \itshape Bar & \itshape Staff & \itshape Note \\
 	\midrule \endhead
-	–  & –   & org   & All bass figures were supplemented by the editor. \\
-	1  & 58  & timp  & 2nd half of bar in Ms: c4–c4 \\
-	   & 31  & B     & 4th quarter: grace note missing in Ms \\
-	4  & 43  & cor 2 & 4th quarter in Ms: c″4 \\
-	5  & 16  & fag 2 & grace note missing in Ms \\
-	   & 34  & T     & grace note missing in Ms \\
-	   & 44  & vlc   & bar in Ms: G8–d8–f8–e4. \\
-	   & 108 & fag 1 & 3rd quarter in Ms: r8–d8 \\
-	   & 149 & fag 1 & bar in Ms: r1 \\
-	6  & 33  & T, B  & T solo in autograph Ms, B solo in printed edition \\
-	12 & 81  & vl 2  & 4th quarter in Ms: bes′8–bes′8 \\
+	–  & –     & b     & All bass figures were supplemented by the editor. \\
+	1  & 58    & timp  & 2nd half of bar in Ms: c4–c4 \\
+	   & 31    & B     & 4th quarter: grace note missing in Ms \\
+	4  & 43    & cor 2 & 4th quarter in Ms: c″4 \\
+	5  & 16    & fag 2 & grace note missing in Ms \\
+	   & 34    & T     & grace note missing in Ms \\
+	   & 44    & vlc   & bar in Ms: G8–d8–f8–e4. \\
+	   & 108   & fag 1 & 3rd quarter in Ms: r8–d8 \\
+	   & 149   & fag 1 & bar in Ms: r1 \\
+	6  & 33    & T, B  & T solo in autograph Ms, B solo in printed edition \\
+	12 & 81    & vl 2  & 4th quarter in Ms: bes′8–bes′8 \\
+	14 & 55–74 & b     & rests in Ms \\
 	\bottomrule
 \end{longtable}
 
@@ -696,6 +697,36 @@ i Sphærers Harmonie!\\
 Dig, Skaber, dig o Dommer, dig, vor Fader!\\
 Dig prise vi.
 \end{multicols}
+
+\begin{multicols}{2}[\lyref{hochinschor}]
+Hoch, ins Chor der Himmels Söhne,\\
+töne unser Harfen Klang!\\
+Tönt, des Lebens hellste Töne!\\
+Werde, Schöpfung, ein Gesang!\\
+Meer und Gluth und Donner lobe:\\
+Sonnen, Sterne, lobet Gott!\\
+Alles, was auf Erden athmet,\\
+lobe Gott!
+
+Halleluja! wir leben!\\
+Halleluja! du bist, du warst, und bleibest ewig\\
+unser Gott!
+
+\columnbreak\itshape
+Høit, i Chor af Millioner,\\
+lyde vore Harpers Klang!\\
+Toner alle Livets Toner!\\
+Al Naturen være Sang!\\
+Hav og Ild og Storm og Torden:\\
+Sole, Stjerner, bryder ud!\\
+Alt hvad Aande har paa Jorden,\\
+love Gud!
+
+Halleluja! vi ere!\\
+Halleluja! du er, du var, og du skal være\\
+vor Gud!
+\end{multicols}
+
 
 \cleardoublepage
 \fi
