--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -173,12 +173,14 @@ end
 \begin{document}
 
 \titlehead{\fancytitlehead}
-\firstname{Friedrich Ludwig Æmilius} % Libretto Jens Immanuel Baggensen
+\firstname{Friedrich Ludwig Æmilius}
 \lastname{Kunzen}
+\namesuffix{and Jens Immanuel Baggensen (librettist)}
 \title{Skabningens Halleluja}
 \shorttitle{Skabningens\\Halleluja}
 \subtitle{Das Halleluja der Schöpfung\\(DK-Kk mu 6506.1133)}
-\instrumentation{2 S, A, T, B (coro), 2 fl, 2 ob, 2 cl, 2 fag, 2 cor, 2 tr, 3 trb, timp,\\vl solo, 2 vl, vla, 2 vlc, b}
+\instrumentation{S, A, T, B (solo), S, A, T, B (coro),\\
+2 fl, 2 ob, 2 cl, 2 fag, 2 cor, 2 tr, 3 trb, timp, vl solo, 2 vl, vla, 2 vlc, b}
 \maketitle
 
 
@@ -202,15 +204,15 @@ Front matter typeset with Source Sans Pro and Fredericka the Great.
 
 This edition bases upon
 \begin{enumerate}
-	\item the autograph manuscript in the Det Kongelige Bibliotek på Slotsholmen – Den Sorte Diamant, available at \url{http://img.kb.dk/ma/kunzen/SkaHal_m.pdf} (siglum mu 6506.1133); and
+	\item the autograph manuscript in the Det Kongelige Bibliotek på Slotsholmen – Den Sorte Diamant, available at \url{http://img.kb.dk/ma/kunzen/SkaHal_m.pdf} (siglum mu 6506.1133);~and
 	\item the printed edition (Hans Georg Nägeli, Zürich, 1802) in the Zentralbibliothek Zürich, available at \url{https://doi.org/10.3931/e-rara-24804} (siglum AMG XIV 316).
 \end{enumerate}
 
-In general, this edition closely follows the autograph manuscript; the printed edition was mainly used as source for the German lyrics. Any changes that were introduced by the editor are indicated by italic type (dynamics and directions), parentheses (expressive marks) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.
+In general, this edition closely follows the autograph manuscript; the printed edition was used as source for the German lyrics. Any changes that were introduced by the editor are indicated by italic type (dynamics and directions), parentheses (expressive marks) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.
 
 \bigskip
 
-\footnotetext[1]{Abbreviations: A, alto; b, violoncello and bass; B, basso; cl, clarinet; cor, horn; fag, bassoon; ob, oboe; Ms, manuscript; r, rest; S, soprano; T, tenore; timp, timpani; tr, trumpet; trb, trombone; vl, violin; vla, viola.}
+\footnotetext[1]{Abbreviations: A, alto; b, bass; B, basso; cl, clarinet; cor, horn; fag, bassoon; ob, oboe; Ms,~manuscript; r, rest; S, soprano; T, tenore; timp, timpani; tr, trumpet; trb, trombone; vl, violin; vla, viola; vlc, violoncello.}
 
 \begin{longtable}{lll L{10cm}}
 	\toprule
@@ -232,27 +234,28 @@ In general, this edition closely follows the autograph manuscript; the printed e
 \end{longtable}
 
 
-This edition has been compiled and checked with utmost diligence. Nevertheless, errors and mistakes cannot be totally excluded. Please report any errors and mistakes to \url{wolfgang@esser-skala.at} or create an issue or pull request on the edition’s GitHub page (https://github.com/skafdasschaf/kunzen-skabningens-halleluja). Your help will be greatly appreciated.
+This edition has been compiled and checked with utmost diligence. Nevertheless, errors and mistakes cannot be totally excluded. Please report any errors and mistakes to \url{wolfgang@esser-skala.at} or create an issue or pull request on the edition’s GitHub page (\url{https://github.com/skafdasschaf/kunzen-skabningens-halleluja}). Your help will be greatly appreciated.
 
-\bigskip
+\medskip
 \textit{Salzburg, April 2020\\
 Wolfgang Esser-Skala}
 
 
-
+\cleardoublepage
 
 \chapter*{Contents. Lyrics.}
 
 
 \begin{multicols}{2}[\lyref{brichnatur}]
 Brich, Natur, in Loblied aus!\\
-Lobt Jehoven, alle Zonen,\\
-lobet, alle Nationen,\\
-lobet Gott!\\
-Preiset ihn in vollen Chören,\\[\baselineskip]
+Lobt Jehoven, alle Zonen!\\
+Lobet, alle Nationen!\\
+Lobet Gott!\\
+Preiset ihn in vollen Chören!\\
+Preiset ihn in vollen Chören,\\
 Himmel, Erd und Meer!\\
-Die ihr athmet, preist den Guten!\\
-Ihn, der schuf des Lichtes Gluthen,\\
+Die ihr athmet, preist den Guten,\\
+ihn, der schuf des Lichtes Gluthen!\\
 Ihn, der Odem gab!\\
 Hoch in frohe Jubeltöne\\
 schweb empor, Gesang, zu Gott!\\
@@ -261,9 +264,9 @@ brechet aus in Jubeltöne,\\
 lobet Gott!\\
 Der gesammten Schöpfung Söhne\\
 singt im heiligsten der Töne,\\
-lobet Gott!\columnbreak
+lobet Gott!
 
-\itshape
+\columnbreak\itshape
 Bryd, o Støv, i Lovsang ud!\\
 Lover Herren alle Zoner!\\
 Lover alle Nationer!\\
@@ -272,7 +275,7 @@ Priiser ham, den Eene Store!\\
 Priiser Ham i fulde Chore,\\
 Himmel, Jord, og Hav!\\
 Alt hvad aander, nynne, stamme\\
-Ham, som tændte Lysets Flamme!\\
+ham, som tændte Lysets Flamme!\\
 Ham, som Aande gav!\\
 Høit i glade Jubeltoner\\
 bryde Livets Lovsang [\textit{or}: Vellyst] ud!\\
@@ -292,8 +295,9 @@ in Licht hervor.\\
 Der Neugeschaffnen Hymne tönt empor:\\
 „Halleluja wir leben!\\
 Halleluja! du bist! du warst! und bleibest ewig\\
-Herr, unser Gott!“\columnbreak
+Herr, unser Gott!“
 
+\columnbreak
 \itshape
 Alt hylled laae [\textit{or}: slumred dybt]\\
 i Muelighedens Skiød,\\
@@ -307,6 +311,7 @@ Nyskabte Væsners Studsen rundt brød ud:\\
 Halleluja! du er, du var, og du skal være\\
 vor Gud!”
 \end{multicols}
+
 \clearpage
 
 \begin{multicols}{2}[\lyref{vomschlaf}]
@@ -323,9 +328,9 @@ sanft weht die Luft, der Bach entflieht,\\
 und Haingesang ertönt zur Schöpfungs Feier,\\
 milder Thau, Rosenduft,\\
 Haingesang, kühle Luft\\
-begrüßt den Tag, erweckt zur Morgenfeier.\columnbreak
+begrüßt den Tag, erweckt zur Morgenfeier.
 
-\itshape
+\columnbreak\itshape
 Fra Skovens [\textit{or}: Lundens] skyggefulde Lye\\
 seer vækket Liv, hver Morgen nye,\\
 i Mark [\textit{or}: Skov] og Eng din Herlighed fremgrye!\\
@@ -354,9 +359,9 @@ erzählet die Schöpfung es laut:\\
 Das ist Gott!\\
 Halleluja! wir leben!\\
 Halleluja! du bist, du warst, und bleibest ewig,\\
-Herr, unser Gott!\columnbreak
+Herr, unser Gott!
 
-\itshape
+\columnbreak\itshape
 Du ruller bort Naturens Slør!\\
 Du tørrer Duggens Graad,\\
 som Jordens Ansigt væder!\\
@@ -491,10 +496,6 @@ Doch sehn wir deinen Wink und hören\\
 in schwarzer Nacht, wo Schreckenston\\
 \hspace*{1em}uns dräut.
 
-Dein Thron wird Nacht, die Sonne fleucht\\
-vom Wolkenzug verscheucht;\\
-des Abgrunds Mächte sich erheben;
-
 \columnbreak\itshape
 Vi love dig, vi takke dig, o Gud!\\
 I Lysets Glands, i Livets stille Fryd.
@@ -503,14 +504,14 @@ Men og vi see dit Vink og høre\\
 \hspace*{1em}dine Bud\\
 i Nattens Mulm, og Skrækkens døve\\
 \hspace*{1em}Lyd.
-
-Din Throne mørknes, Solen flyer\\
-bag tykke Skyer;\\
-sig Dybets sorte Kæmpe hæver;
 \end{multicols}
 
+\clearpage
 
 \begin{multicols}{2}
+Dein Thron wird Nacht, die Sonne fleucht\\
+vom Wolkenzug verscheucht;\\
+des Abgrunds Mächte sich erheben;
 vom Donnerschlag der Erde Festen beben.
 
 Sieh, Thäler schwellen! Höhen stürzen ein!\\
@@ -528,6 +529,9 @@ Gerechter Gott, du furchtbar mächtger Gott!\\
 Wir tief im Staube hören dein Geboth.
 
 \columnbreak\itshape
+Din Throne mørknes, Solen flyer\\
+bag tykke Skyer;\\
+sig Dybets sorte Kæmpe hæver;
 og Jordens lynildslagne Grundvold bæver.
 
 See, Dale svulme! Høie synke ned!\\
@@ -698,7 +702,7 @@ Dig, Skaber, dig o Dommer, dig, vor Fader!\\
 Dig prise vi.
 \end{multicols}
 
-\begin{multicols}{2}[\lyref{hochinschor}]
+\begin{multicols}{2}[\lyref{hochins}]
 Hoch, ins Chor der Himmels Söhne,\\
 töne unser Harfen Klang!\\
 Tönt, des Lebens hellste Töne!\\
